# government-agent-starters

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: __init__.py
agents/compliance_audit_agent/: README.md  __init__.py  agent.py  config.yaml  prompt.md
agents/compliance_audit_agent/examples/: input.json  output.json
agents/finops_review_agent/: README.md  __init__.py  agent.py  config.yaml  prompt.md
agents/finops_review_agent/examples/: input.json  output.json
agents/program_support_agent/: README.md  __init__.py  agent.py  config.yaml  prompt.md
agents/program_support_agent/examples/: input.json  output.json
agents/requirements_architect_agent/: README.md  __init__.py  agent.py  config.yaml  prompt.md
agents/requirements_architect_agent/examples/: input.json  output.json
agents/secure_code_agent/: README.md  __init__.py  agent.py  config.yaml  prompt.md
agents/secure_code_agent/examples/: input.json  output.json
docs/: adding-agents.md  architecture.md  deployment.md  mcp-tools.md  platform-integration.md  security.md
examples/: run_agent_example.py
scripts/: lint.sh  setup.sh
src/niyam/: __init__.py
src/niyam/runner/: __init__.py  cli.py  config.py  discovery.py
src/niyam/sdk/: __init__.py  agent.py  mcp.py  protocols.py
src/niyam/testing/: __init__.py  backends.py  connectors.py
templates/new_agent/: README.md  __init__.py  agent.py  config.yaml  prompt.md
templates/new_agent/examples/: input.json  output.json
tests/: conftest.py  test_cli.py  test_sdk_mcp.py
tests/test_agents/: test_compliance_audit_agent.py  test_finops_review_agent.py  test_program_support_agent.py  test_requirements_architect_agent.py  test_secure_code_agent.py
tests/test_core/: test_agent_base.py  test_config.py  test_connectors.py  test_models.py  test_registry.py
